fix: elevation z-index

--- a/apps/meteor/app/theme/client/imports/components/main-content.css
+++ b/apps/meteor/app/theme/client/imports/components/main-content.css
@@ -1,7 +1,7 @@
 .main-content {
 	position: relative;
 
-	z-index: 0;
+	z-index: 2;
 
 	display: flex;
 	flex-direction: column;
