--- a/apps/meteor/app/theme/client/imports/components/sidebar/sidebar.css
+++ b/apps/meteor/app/theme/client/imports/components/sidebar/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
 	position: relative;
 
-	z-index: 2;
+	z-index: 3;
 
 	display: flex;
 	flex-direction: column;
